--- a/src/main/resources/templates/layouts/Master/partyMaster.html
+++ b/src/main/resources/templates/layouts/Master/partyMaster.html
@@ -40,6 +40,19 @@
 	color: red;
 	font-size: 11px;
 }
+
+
+.form-control-sm {
+	height: 30px;
+	width: 120px;
+	font-size: 11px;
+}
+
+.select {
+	width: 77px;
+	font-size: 11px;
+}
+
 </style>
 
 
@@ -589,7 +602,7 @@
 																	</td>
 																	<td>
 																		<fieldset>
-																			<input type="date" class="form-control"
+																			<input type="text" class="form-control"
 																				placeholder="" title="Billing Addr2" name="listPartyBilling[0].billingAddr2">
 																		</fieldset>
 																	</td>
@@ -601,7 +614,7 @@
 																	</td>
 																	<td>
 																		<fieldset>
-																			<select class="form-control" id="departmentDropdown"
+																			<select class="form-control form-control-sm select" id="departmentDropdown"
 																				title="Department Name" name="listPartyBilling[0].billingAddr3" required>
 																				<option value="">Select</option>
 																				<option th:each="city :  ${listCity}"
@@ -612,7 +625,7 @@
 																	</td>
 																	<td>
 																		<fieldset>
-																			<select class="form-control" id="departmentDropdown"
+																			<select class="form-control form-control-sm select" id="departmentDropdown"
 																				title="Department Name" name="listPartyBilling[0].billingAddr3" required>
 																				<option value="">Select</option>
 																				<option th:each="state :  ${listState}"
@@ -630,7 +643,7 @@
 																	</td>
 																	<td>
 																		<fieldset>
-																			<select class="form-control" 
+																			<select class="form-control form-control-sm select" 
 																				title="Country Name" name="listPartyBilling[0].billingAddr3" required>
 																				<option value="">Select</option>
 																				<option th:each="country :  ${listCountry}"
@@ -652,7 +665,7 @@
 
 													<div class="box">
 
-
+														<h5>Consignee Details</h5>
 
 														<div class="box-body">
 															<div class="col-sm-12" style="text-align: right">
@@ -704,7 +717,7 @@
 																		</td>
 																		<td>
 																			<fieldset>
-																				<input type="date" class="form-control" name="listPartyConsignee[0].consigneeAddr2"
+																				<input type="text" class="form-control" name="listPartyConsignee[0].consigneeAddr2"
 																					placeholder="" title="Billing Addr2">
 																			</fieldset>
 																		</td>
@@ -716,7 +729,7 @@
 																		</td>
 																		<td>
 																			<fieldset>
-																				<select class="form-control" id="departmentDropdown"
+																				<select class="form-control form-control-sm select" id="departmentDropdown"
 																					title="Department Name" name="listPartyConsignee[0].city" required>
 																					<option value="">Select</option>
 																					<option th:each="city :  ${listCity}"
@@ -727,7 +740,7 @@
 																		</td>
 																		<td>
 																			<fieldset>
-																				<select class="form-control" id="departmentDropdown"
+																				<select class="form-control form-control-sm select" id="departmentDropdown"
 																					title="Department Name" name="listPartyConsignee[0].country" required>
 																					<option value="">Select</option>
 																					<option th:each="country :  ${listCountry}"
