--- a/src/main/resources/templates/layouts/Master/purchaseOrder.html
+++ b/src/main/resources/templates/layouts/Master/purchaseOrder.html
@@ -274,17 +274,19 @@
 																placeholder="gst" th:field="*{conversionValue}">
 														</div>
 
-														<div class="form-group col-md-4">
-															<label for="inputPassword4">Remarks</label> <input
-																type="text" class="form-control" id="inputPassword4"
-																placeholder="gst" th:field="*{remarks}">
-														</div>
-
-														<div class="form-group col-md-4">
+														<div class="form-group col-md-6">
 															<label for="inputAddress">Invoice Address</label> <input
 																type="text" class="form-control" id="inputAddress"
 																placeholder="Invoce Address">
 														</div>
+
+														<div class="form-group col-md-6">
+															<label for="inputPassword4">Remarks</label> <textarea
+																type="text" class="form-control" id="inputPassword4"
+																placeholder="gst" th:field="*{remarks}"></textarea>
+														</div>
+
+
 													</div>
 												</div>
 												<!--end box-4-->
@@ -292,6 +294,8 @@
 
 												<!--detail box-->
 												<div class="box">
+												
+													<h5>Item Details</h5>
 													<div class="box-body">
 
 														<input id="_cr" name="_cr" type="hidden" value="1">
@@ -341,6 +345,8 @@
 																			class="form-control form-control-sm select"
 																			title="type" onchange="supplierInfo()">
 																				<option value="">Select</option>
+																				<option value="">Material</option>
+																				<option value="">Service</option>
 
 
 
