--- a/src/main/resources/templates/layouts/editview/editQuotationDetail.html
+++ b/src/main/resources/templates/layouts/editview/editQuotationDetail.html
@@ -576,6 +576,7 @@
 
 										<div class="box-footer">
 											<button type="submit" class="btn btn-primary">Submit</button>
+											<input type="button" value="Go back!" class="btn btn-danger"onclick="history.back()">
 										</div>
 
 								</form>
