--- a/src/main/resources/templates/layouts/listview/listofprogram.html
+++ b/src/main/resources/templates/layouts/listview/listofprogram.html
@@ -71,8 +71,7 @@
 										</div>
 
 										<div class="box-footer">
-											<input type="submit" value="Back" onclick='window.history.back();'
-												class="btn btn-link" />
+											<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
 										</div>
 
 									</form>
