--- a/src/main/resources/templates/layouts/listview/listofserviceCategory.html
+++ b/src/main/resources/templates/layouts/listview/listofserviceCategory.html
@@ -77,8 +77,7 @@
 							</div>
 
 							<div class="row" style="margin: 10px">
-								<input type="submit" value="Back"  onclick='javascript:window.history.back()'
-									class="btn btn-link" /> 
+								<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
 							</div>
 
 									</form>
