--- a/src/main/resources/templates/layouts/Master/UOM.html
+++ b/src/main/resources/templates/layouts/Master/UOM.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
+<head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>EBS</title>
@@ -18,6 +18,15 @@
 	th:href="@{/css/AdminLTE.min.css}">
 <link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
 	th:href="@{/css/skins/_all-skins.min.css}">
+
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+
+<link
+	href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
+	rel="stylesheet" />
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
 
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -40,85 +49,148 @@
 		<div>
 			<div th:replace="fragments/header :: header">...</div>
 			<div th:replace="fragments/sidebar :: sidebar">...</div>
-			<section class="content-wrapper">
-				<div class="row">
-					<!-- left column -->
-					<div class="col-md-12">
-						<div class="col-md-3"></div>
+
+			<div class="wrapper">
+
+				<section class="content-wrapper">
+
+					<!-- Content Header (Page header) -->
+					<section class="content-header">
+						<h4>
+							UOM Master
+							<!--<small>it all starts here</small>-->
+						</h4>
+						<ol class="breadcrumb">
+							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+							<li><a href="#">Examples</a></li>
+							<li class="active">Blank page</li>
+						</ol>
+					</section>
 
 
-						<div class="col-md-6" style="margin-top: 20px;">
+					<!-- Main content -->
+					<section class="content">
 
-							<div class="box box-primary">
-								<div class="box-header with-border">
-									<h3 class="box-title">UOM</h3>
-								</div>
-								<!-- form start -->
-								<form id="uomForm" role="form" th:action="@{/uom/}"
-									method="POST" th:object="${uom}">
-									<div class="box-body">
+						<!-- Default box -->
+						<div class="box">
 
-										<div class="form-group col-md-12">
-											<label>UOM Code</label><label style="color: red">*</label> <input
-												type="text" class="form-control" placeholder="Uom Code"
-												th:field="*{uomCode}" title="This field is required"
-												required />
+
+
+							<div class="row">
+								<!-- left column -->
+								<div class="col-md-12">
+									<div class="col-md-2"></div>
+
+
+									<div class="col-md-8 shadow bg-white rounded"
+										style="margin-top: 20px;">
+										<!-- general form elements -->
+										<div class="box box-primary">
+											<input type="hidden" id="mess" name="mess"
+												th:value="${message}">
+											<div class="box-header with-border">
+												<!--<h3 class="box-title">Category Master</h3>-->
+											</div>
+											<!-- /.box-header -->
+											<!-- form start -->
+											<form id="uomForm" role="form" th:action="@{/uom/}"
+												method="POST" th:object="${uom}">
+												<div class="box-body">
+
+
+													<div class="form-group col-md-12">
+														<label>UOM Code</label><label style="color: red">*</label>
+														<input type="text" class="form-control"
+															placeholder="Uom Code" th:field="*{uomCode}"
+															title="This field is required">
+
+													</div>
+
+													<div class="form-group col-md-12">
+														<label>Unit</label><label style="color: red">*</label> <input
+															type="text" class="form-control" placeholder="Unit"
+															th:field="*{unit}" title="This field is required" />
+
+													</div>
+
+
+													<div class="form-group col-md-12">
+														<label class="form-label">Measurement System</label> <select
+															class="form-control" title="measurement system"
+															th:field="*{measurementSystem}">
+															<option value="">Select</option>
+															<option value="british">British</option>
+															<option value="french">French</option>
+
+														</select>
+													</div>
+
+
+
+
+
+
+
+
+												</div>
+												<!-- /.box-body -->
+
+												<div class="box-footer" style="margin: 10px">
+													<input type="submit" value="Submit" class="btn btn-primary" />
+													<input type="reset" value="Reset" class="btn btn-danger" />
+												</div>
+
+
+											</form>
+
 
 										</div>
-										<div class="form-group col-md-12">
-											<label>Unit</label><label style="color: red">*</label> <input
-												type="text" class="form-control" placeholder="Unit"
-												th:field="*{unit}" title="This field is required" required />
-
+										<!-- /.box -->
+										<div
+											style="width: parent; text-align-last: right; margin: 8px">
+											<a th:href="@{/uom/list}">View All UOM</a>
 										</div>
-
-										<div class="form-group col-lg-12">
-											<label class="form-label">Measurement System</label> <select
-												class="form-control" title="measurement system"
-												th:field="*{measurementSystem}">
-												<option value="">Select</option>
-												<option value="british">British</option>
-												<option value="french">French</option>
-												<!-- <option th:each="country :  ${countryList}"
-									th:text="${country.countryName}"
-									th:value=" ${country.countryCode}"></option> -->
-											</select>
-										</div>
-
-
 									</div>
 
-									<div class="box-footer">
-										<input type="submit" value="Submit" class="btn btn-primary" />
-										<input type="reset" value="Reset" class="btn btn-danger" />
-									</div>
 
-
-								</form>
-
-								<div style="width: parent; text-align-last: right; margin: 8px">
-									<a th:href="@{/uom/list}">View All UOM</a>
+									<div class="col-md-2"></div>
 								</div>
+
 							</div>
+
 						</div>
-
-
-						<div class="col-md-3"></div>
-					</div>
-
-				</div>
-			</section>
+					</section>
+				</section>
+			</div>
 		</div>
 	</div>
+
 	<div th:replace="fragments/footer :: footer">...</div>
 
 	<script>
+		$(document).ready(function() {
+			var message = document.getElementById('mess').value
+			if (message != null && message !== "") {
 
-				$("#uomForm").validate({
-					ignoreTitle: true
+				swal(message, "", "success", {
+					button : "OK",
+					hideClass : {
+						popup : 'animate__animated animate__fadeOutUp'
+					},
 				});
+			} else {
+				console.log("ajax request : " + message);
+			}
 
-			</script>
+		});
+	</script>
+
+	<script>
+		$("#categoryForm").validate({
+			ignoreTitle : true
+		});
+	</script>
+
 	<!--   <section class="content">
         
         </section>-->
