--- a/src/main/resources/templates/layouts/editview/editDepartment.html
+++ b/src/main/resources/templates/layouts/editview/editDepartment.html
@@ -118,7 +118,7 @@
 
 												<div class="box-footer" style="margin: 10px">
 													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
+													<input type="button" value="Go back!" class="btn btn-danger"onclick="history.back()">
 												</div>
 
 
