--- a/src/main/resources/templates/layouts/listview/listofCompany.html
+++ b/src/main/resources/templates/layouts/listview/listofCompany.html
@@ -83,8 +83,7 @@
 
 										<div class="box-footer">
 
-											<input type="button" value="Go back!" class="btn btn-link"
-												onclick="history.back()">
+											<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
 
 										</div>
 
