--- a/src/main/resources/templates/layouts/listview/listofrequestForQuotation.html
+++ b/src/main/resources/templates/layouts/listview/listofrequestForQuotation.html
@@ -80,8 +80,7 @@
 										</div>
 
 										<div class="box-footer">
-											<input type="submit" value="Back" onclick='javascript:window.history.back()'
-												class="btn btn-link" />
+											<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
 										</div>
 
 									</form>
