--- a/src/main/resources/templates/layouts/listview/listofstore.html
+++ b/src/main/resources/templates/layouts/listview/listofstore.html
@@ -80,8 +80,7 @@
 
 
 											<div class="row" style="margin: 10px">
-												<input type="submit" value="Back"
-													onclick='javascript:window.history.back()' class="btn btn-link" />
+												<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
 											</div>
 
 
