--- a/src/main/resources/templates/layouts/listview/listofuom.html
+++ b/src/main/resources/templates/layouts/listview/listofuom.html
@@ -92,8 +92,7 @@
 										</div>
 
 										<div class="box-footer">
-											<input type="button" value="Go back!" class="btn btn-link"
-												onclick="history.back()">
+											<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
 										</div>
 
 									</form>
