code commit@Rahul
add fk in entity

--- a/src/main/resources/templates/layouts/Master/financialactiveyear.html
+++ b/src/main/resources/templates/layouts/Master/financialactiveyear.html
@@ -118,7 +118,7 @@
 															<option value="">Select Financial year</option>
 															<option th:each="financialYear :  ${listFinancialyear}"
 																th:text="${financialYear.financialYearCode}"
-																th:value=" ${financialYear.id}"></option>
+																th:value=" ${financialYear.financialYearCode}"></option>
 														</select>
 													</div>
 
