--- a/src/main/resources/templates/layouts/editview/editItemOpening.html
+++ b/src/main/resources/templates/layouts/editview/editItemOpening.html
@@ -44,7 +44,7 @@
 
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-blue sidebar-mini" onload="getItemDetail()">
 	<div class="wrapper">
 		<div>
 			<div th:replace="fragments/header :: header">...</div>
@@ -173,7 +173,7 @@
 
 												<div class="box-footer" style="margin: 10px">
 													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
+													<input type="button" value="Go back!" class="btn btn-danger"onclick="history.back()">
 												</div>
 
 
