code commit@Rahul
database structure for gate entry

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -97,12 +97,30 @@
 							<li><a th:href="@{/item/}"><i class="fa fa-circle-o"></i> Item</a></li>
 							<li><a th:href="@{/uom/}"><i class="fa fa-circle-o"></i> UOM(Unit of Measurement)</a></li>
 							<li><a th:href="@{/servicecategory/}"><i class="fa fa-circle-o"></i> Service Category</a></li>
+							<li><a th:href="@{/party/}"><i class="fa fa-circle-o"></i> Party Master</a></li>
+							
+
+
+
+						</ul>
+					</li>
+					
+					
+					<li>
+						<a href="#"><i class="fa fa-circle-o"></i>WhareHouse Master <i
+								class="fa fa-angle-left pull-right"></i></a>
+						<ul class="treeview-menu">
+
+							<li><a th:href="@{/itemopening/}"><i class="fa fa-circle-o"></i> Item-Opening</a></li>
+							
 
 
 
 
 						</ul>
 					</li>
+					
+					
 					<li>
 						<a href="#"><i class="fa fa-circle-o"></i>Employee Info <i
 								class="fa fa-angle-left pull-right"></i></a>
